membuat halaman about me

--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ header{
     box-shadow: 0 .5rem 1 rem rgba(0, 0, 0, .1);
 }
 
+header .logo{
+    width: 0.5rem;
+}
+header .logo image{
+    width:f.0.5rem;
+}
 header .navbar a{
     font-size: 2rem;
     padding: 0 3.75rem;
@@ -73,8 +79,18 @@ header .navbar a:hover{
 }
 
 .home .content h3{
-    font-size: 3.5rem;
+    font-size: 1.75rem;
     color: #333;
+    border-radius: 2.5rem;
+    border-style: hidden;
+    background-color:#FFCFDA ;
+    text-align: center;
+    width: 16rem;
+    height: 4rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    content: url('https://api.iconify.design/fluent-emoji/waving-hand-light.svg');
+    align-content:space-around;
 }
 
 .home .content span{
@@ -82,5 +98,72 @@ header .navbar a:hover{
     color: #333;
     padding: 1rem 0;
     line-height: 1.5;
-    font-weight:bold;
+    font-weight:bolder;
 }
+
+.heading{
+    text-align: center;
+    font-size: 4rem;
+    color: #333;
+    padding: 1rem;
+    margin: 2rem 0;
+    background: rgba(255, 255, 255);
+    border-radius: 2.5rem;
+    box-shadow: 0 .5rem 1 rem rgba(0, 0, 0, .1);
+    
+   
+}
+
+.heading .I {
+    color: var(--pink);
+}
+
+.about{
+    background-color: #F6D3F5;
+}
+
+.about .row{
+    display: flex;
+    align-items: center;
+    gap:2rem;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    padding-bottom: 3rem;
+}
+
+.about .row .kartun_cewek{
+    
+    flex: 1 1 40rem;
+    position: relative;
+    padding-left:5rem;
+}
+
+.about .row .kartun_cewek image{
+    width: 100%;
+    border: 1.5rem solid #FFCFDA;
+    border-radius: 0.5rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .1);
+    height: 100%;
+    object-fit: cover;
+}
+
+.about .row .content{
+    flex: 1 1 40rem;
+    padding-right: 10rem;
+    text-align: justify;
+}
+
+.about .row .content h3{
+    font-size: 3rem;
+    color:#333;
+    border-bottom: .25rem solid black;
+}
+
+.about .row .content p{
+    font-size: 1.5rem;
+    color:#666;
+    padding: .5rem 0;
+    padding-top: 1rem;
+    line-height: 1.5;
+}
+
