mengedit home, about, dan menambah about

--- a/style.css
+++ b/style.css
@@ -50,10 +50,12 @@ header{
 }
 
 header .logo{
-    width: 0.5rem;
+    width: 5rem;
+    height: auto;
+    display: block;
 }
-header .logo image{
-    width:f.0.5rem;
+header .logo img{
+    width:100%;
 }
 header .navbar a{
     font-size: 2rem;
@@ -85,20 +87,37 @@ header .navbar a:hover{
     border-style: hidden;
     background-color:#FFCFDA ;
     text-align: center;
-    width: 16rem;
-    height: 4rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    content: url('https://api.iconify.design/fluent-emoji/waving-hand-light.svg');
-    align-content:space-around;
+    display: inline;
+    height: 30rem;
+    padding-right: 2rem;
 }
 
-.home .content span{
+.home .content h3 .hello{
+ 
+    content: url('https://api.iconify.design/fluent-emoji/waving-hand-light.svg');
+    height: 7rem;
+    display: inline;
+    width: 7rem;
+   
+}
+
+.home .content .name{
     font-size: 6rem;
     color: #333;
     padding: 1rem 0;
     line-height: 1.5;
     font-weight:bolder;
+    display: block;
+ 
+}
+
+.home .content .work{
+    font-size: 6rem;
+    color: #333;
+    line-height: 1.5;
+    font-weight:bolder;
+    display: block;
+   
 }
 
 .heading{
@@ -136,6 +155,7 @@ header .navbar a:hover{
     flex: 1 1 40rem;
     position: relative;
     padding-left:5rem;
+    flex-grow: 10;
 }
 
 .about .row .kartun_cewek image{
@@ -151,6 +171,7 @@ header .navbar a:hover{
     flex: 1 1 40rem;
     padding-right: 10rem;
     text-align: justify;
+    flex-grow: 20;
 }
 
 .about .row .content h3{
@@ -167,3 +188,18 @@ header .navbar a:hover{
     line-height: 1.5;
 }
 
+
+
+.about .icon-conta{
+    background: #eee;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    width: 12rem;
+}
+
+.about .icon-conta .logo{
+    content: url('https://api.iconify.design/jam/linkedin-square.svg');
+}
