--- a/wurewof.github.io/style.css
+++ b/wurewof.github.io/style.css
@@ -8,7 +8,6 @@
     font-family: Eczar, serif;
     outline:none; border: none;
     text-decoration: none;
-    text-transform: capitalize;
     transition: .2s linear;
 }
 
@@ -50,10 +49,12 @@ header{
 }
 
 header .logo{
-    width: 0.5rem;
+    width: 5rem;
+    height: auto;
+    display: block;
 }
-header .logo image{
-    width:f.0.5rem;
+header .logo img{
+    width:100%;
 }
 header .navbar a{
     font-size: 2rem;
@@ -69,7 +70,8 @@ header .navbar a:hover{
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background:url(../wurewof.github.io/background.jpg) no-repeat;
+    
+    background: url(bg.png) no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -85,20 +87,37 @@ header .navbar a:hover{
     border-style: hidden;
     background-color:#FFCFDA ;
     text-align: center;
-    width: 16rem;
-    height: 4rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    content: url('https://api.iconify.design/fluent-emoji/waving-hand-light.svg');
-    align-content:space-around;
+    display: inline;
+    height: 30rem;
+    padding-right: 2rem;
 }
 
-.home .content span{
+.home .content h3 .hello{
+ 
+    content: url('https://api.iconify.design/fluent-emoji/waving-hand-light.svg');
+    height: 7rem;
+    display: inline;
+    width: 7rem;
+   
+}
+
+.home .content .name{
     font-size: 6rem;
     color: #333;
     padding: 1rem 0;
     line-height: 1.5;
     font-weight:bolder;
+    display: block;
+ 
+}
+
+.home .content .work{
+    font-size: 6rem;
+    color: #333;
+    line-height: 1.5;
+    font-weight:bolder;
+    display: block;
+   
 }
 
 .heading{
@@ -119,7 +138,8 @@ header .navbar a:hover{
 }
 
 .about{
-    background-color: #F6D3F5;
+    background-color: #ffc8fd;
+    
 }
 
 .about .row{
@@ -131,39 +151,89 @@ header .navbar a:hover{
     padding-bottom: 3rem;
 }
 
-.about .row .kartun_cewek{
+.about .row .kartun-cewek{
     
     flex: 1 1 40rem;
     position: relative;
-    padding-left:5rem;
+    padding-left:2rem;
+    flex-grow: 20;
 }
 
-.about .row .kartun_cewek image{
+.about .row .kartun-cewek img{
     width: 100%;
-    border: 1.5rem solid #FFCFDA;
-    border-radius: 0.5rem;
+    border: 1.5rem solid #fff5f7;
+    border-radius: 50rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .1);
     height: 100%;
     object-fit: cover;
+    
 }
 
+ 
 .about .row .content{
     flex: 1 1 40rem;
-    padding-right: 10rem;
+    padding-right: 3rem;
+    padding-left: 3rem;
     text-align: justify;
+    flex-grow: 20;
 }
 
 .about .row .content h3{
     font-size: 3rem;
     color:#333;
     border-bottom: .25rem solid black;
+    text-align: center;
 }
 
 .about .row .content p{
-    font-size: 1.5rem;
+    font-size: 2rem;
     color:#666;
     padding: .5rem 0;
     padding-top: 1rem;
     line-height: 1.5;
 }
 
+.skill{
+    background-color: #ffd7fe;
+}
+
+.skill .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.skill .box-container .box{
+    flex: 1 1 30rem;
+    border-radius: 0.5rem;
+    background: #f7c5d0;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    border: .1rem solid rgba(0, 0, 0, .2);
+    text-align: center;
+    padding: 2rem;
+}
+
+.skill .box-container .box:hover{
+    background-color: #f3a0b3;
+}
+
+.skill .box-container .box h3 {
+    font-size: 2.5rem;
+    color: #333;
+}
+
+.skill .box-container .box p{
+    font-size: 1.5rem;
+    color: #666;
+    padding: .5rem 0;
+    line-height: 2;
+}
+
+.skill .box-container .box img{
+    width: 8rem;
+    border: 1.5rem solid #f7c5d0;
+    border-radius: 2rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .1);
+    height: 8rem;
+    
+}
