--- a/style.css
+++ b/style.css
@@ -44,13 +44,13 @@ section{
 header{
     position: fixed;
     top: 0; left: 0; right: 0;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 2rem 9%;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 0.5rem 9%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 1000;
-    box-shadow: 0 .5rem 1 rem rgba(0, 0, 0, .1);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 }
 
 
@@ -58,10 +58,13 @@ header .logo{
     width: 5rem;
     height: auto;
     display: block;
+    padding: 0;
 }
+
 header .logo img{
     width:100%;
 }
+
 header .navbar a{
     font-size: 2rem;
     padding: 0 3.75rem;
@@ -86,19 +89,19 @@ header .navbar a:hover{
 
 
 .home .content{
-    max-width: 50rem;
+    max-width: 70rem;
 }
 
 
 .home .content h3{
-    font-size: 1.75rem;
+    font-size: 2rem;
     color: #333;
-    border-radius: 2.5rem;
+    border-radius: 5rem;
     border-style: hidden;
     background-color:#FFCFDA ;
     text-align: center;
     display: inline;
-    height: 30rem;
+    height: 20rem;
     padding-right: 2rem;
 }
 
@@ -109,28 +112,19 @@ header .navbar a:hover{
     height: 7rem;
     display: inline;
     width: 7rem;
-   
+    position: relative;
+    top: 30px;
 }
 
 
 .home .content .name{
-    font-size: 6rem;
+    font-size: 8rem;
     color: #333;
-    padding: 1rem 0;
+    padding: 2rem 1rem;
     line-height: 1.5;
     font-weight:bolder;
-    display: block;
- 
-}
-
-
-.home .content .work{
-    font-size: 6rem;
-    color: #333;
-    line-height: 1.5;
-    font-weight:bolder;
-    display: block;
-   
+    display:block;
+    width: 100%;
 }
 
 
@@ -408,3 +402,107 @@ header .navbar a:hover{
     font-size: 1.5rem;
     color:#999;
 }
+
+.contact .box-cont .box2 .logo-ig{
+    content: url('https://api.iconify.design/mdi/instagram.svg?color=%23e84393');
+    width: 6rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+    border-radius: 2rem;
+}
+
+.contact .box-cont .box2 .logo-email{
+    content: url('https://api.iconify.design/mdi/email-outline.svg?color=%23e84393');
+    width: 6rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+    border-radius: 2rem;
+}
+
+.contact .box-cont .box2 .logo-tt{
+    content: url('https://api.iconify.design/ic/baseline-tiktok.svg?color=%23e84393');
+    width: 6rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+    border-radius: 2rem;
+}
+
+.contact .box-cont .box2 .logo-hp{
+    content: url('https://api.iconify.design/uil/phone.svg?color=%23e84393');
+    width: 6rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+    border-radius: 2rem;
+}
+
+.contact .rows{
+    display: flex;
+    align-items: center;
+    gap:2rem;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    padding-bottom: 3rem;
+}
+
+.contact .rows .box-cont{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+
+
+}
+
+.contact .rows .box-cont .box2{
+    text-align: justify; 
+    border: .1rem solid rgba(0, 0, 0, .2);
+    padding: 2rem;
+    background: #f7c5d0;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+}
+
+.contact .rows .box-cont .box2 h3{
+    text-align: center;
+    padding-bottom: 0.5rem;
+}
+
+.contact .rows .box-cont .btn-contact{
+    display: inline-block;
+    margin-top: .1rem;
+    border-radius: 1rem;
+    background: #4D5566;
+    color: #fff;
+    padding: .5rem 0.5rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+.contact .rows .box-cont .btn-contact:hover{
+    background:var(--pink);
+}
+
+
+.contact .pic-container{
+    flex: 1 1 40rem;
+    position: relative;
+    width:90rem;
+    height: 30rem;
+    
+}
+
+.contact .pic-container h1{
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    font-size: 4rem;
+    color: #333;
+    width:100%;
+    padding: 1rem 5rem;
+    
+}
+
+.contact .pic-container img{
+    width:100%;
+    height:100%;
+    object-fit:fill;
+}
+
+.contact{
+    background-color:#ffc8fd;
+}
+
+
